# Hackathone-FOSS-trust-node

./: Cargo.toml  LICENSE  README.md  ROADMAP.md
assets/: Cargo.toml
assets/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scheduler/: Cargo.toml
scheduler/src/: lib.rs
trust-fund/: Cargo.toml
trust-fund/src/: lib.rs
