[package]
name = "node-template"
version = "2.0.0"
authors = ["FOSS Team"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "node-template"
path = "src/main.rs"

[dependencies]
derive_more = "0.14.0"
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
log = "0.4"
tokio = "0.1"
exit-future = "0.1"
parking_lot = "0.9.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
trie-root = "0.15.2"
sr-io = { git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173" }
substrate-cli = { git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173" }
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173" }
substrate-executor = { git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173" }
substrate-service = { git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173" }
inherents = { package = "substrate-inherents", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173" }
transaction-pool = { package = "substrate-transaction-pool", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173" }
network = { package = "substrate-network", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173" }
babe = { package = "substrate-consensus-babe", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173" }
babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173" }
grandpa = { package = "substrate-finality-grandpa", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173" }
grandpa-primitives = { package = "substrate-finality-grandpa-primitives", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173" }
substrate-client = {  git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173" }
basic-authorship = { package = "substrate-basic-authorship", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173" }
node-template-runtime = { path = "runtime" }

[build-dependencies]
vergen = "3"

[workspace]
members = [ "runtime", "assets", "trust-fund" ]
exclude = [ "runtime/wasm" ]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"