[package]
name = "srml-assets"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
# Needed for various traits. In our case, `OnFinalize`.
sr-primitives = { git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default-features = false }
# Needed for type-safe access to storage DB.
support = { package = "srml-support", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default-features = false }
# `system` module provides us with all sorts of useful stuff and macros depend on it being around.
system = { package = "srml-system", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default-features = false }

[dev-dependencies]
primitives = { package = "substrate-primitives",  git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173" }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173" }
runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sr-primitives/std",
	"support/std",
	"system/std",
]
