[package]
name = "node-template-runtime"
version = "2.0.0"
authors = ["Anonymous"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
safe-mix = { version = "1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default_features = false }
runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default_features = false }
version = { package = "sr-version", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default_features = false }
support = { package = "srml-support", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default_features = false }
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default_features = false }
substrate-session = { git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default-features = false }
assets = { package = "srml-assets", path = "../assets", default_features = false}
balances = { package = "srml-balances", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default_features = false }
babe = { package = "srml-babe", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default-features = false }
babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default-features = false }
executive = { package = "srml-executive", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default_features = false }
indices = { package = "srml-indices", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default_features = false }
grandpa = { package = "srml-grandpa", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default-features = false }
system = { package = "srml-system", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default_features = false }
timestamp = { package = "srml-timestamp", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default_features = false }
sudo = { package = "srml-sudo", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default_features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default_features = false }
client = { package = "substrate-client", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default_features = false }
offchain-primitives = { package = "substrate-offchain-primitives", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default-features = false }
trust-fund = { path = "../trust-fund", default_features = false}

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.2" }

[features]
default = ["std"]
std = [
	"codec/std",
	"client/std",
	"rstd/std",
	"runtime-io/std",
	"support/std",
	"assets/std",
	"balances/std",
	"babe/std",
	"babe-primitives/std",
	"executive/std",
	"indices/std",
	"grandpa/std",
	"primitives/std",
	"sr-primitives/std",
	"system/std",
	"timestamp/std",
	"sudo/std",
	"version/std",
	"serde",
	"safe-mix/std",
	"offchain-primitives/std",
	"substrate-session/std",
	"trust-fund/std"
]
no_std = []
