[package]
name = "scheduler"
version = "0.1.0"
authors = ["Ian He", "Shaopeng Wang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
safe-mix = { version = "1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default_features = false }
runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default_features = false }
version = { package = "sr-version", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default_features = false }
support = { package = "srml-support", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default_features = false }
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default_features = false }
balances = { package = "srml-balances", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default_features = false }
executive = { package = "srml-executive", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default_features = false }
system = { package = "srml-system", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default_features = false }
indices = { package = "srml-indices", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default_features = false }
timestamp = { package = "srml-timestamp", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default_features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default_features = false }
offchain-primitives = { package = "substrate-offchain-primitives", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sr-primitives/std",
	"support/std",
	"system/std",
	"balances/std",
	"runtime-io/std",
	"rstd/std"
]