[package]
name = "trust-fund"
version = "2.0.0"
authors = ["Ian He"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
support = { package = "srml-support", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default-features = false }
system = { package = "srml-system", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default-features = false }
balances = { package = "srml-balances", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default-features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default-features = false }
runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default-features = false }
assets = { package = "srml-assets", path = "../assets", default_features = false}
timestamp = { package = "srml-timestamp", git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173", default_features = false }

[dev-dependencies]
primitives = { package = "substrate-primitives",  git = "https://github.com/paritytech/substrate", rev="3bc7b0baa019e48d783fd9a0fae4210c330ca173" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sr-primitives/std",
	"support/std",
	"system/std",
	"balances/std",
	"runtime-io/std",
	"rstd/std",
	"assets/std",
	"timestamp/std"
]
